fix(yalb-1141): fixed menuVariation bug in config, fixed megaMenu for different alignments

--- a/components/03-organisms/menu/primary-nav/_yds-primary-nav.scss
+++ b/components/03-organisms/menu/primary-nav/_yds-primary-nav.scss
@@ -76,10 +76,10 @@ $menu-sub-max-width: 19rem;
     place-content: center;
   }
 
+  // add negative left margin for both `mega` and `basic` variations
+  // to align the menu item text with the site name.
   [data-site-header-nav-position='left'] & {
-    &[data-menu-variation='basic'] {
-      margin-left: calc(var(--size-spacing-5) * -1);
-    }
+    margin-left: calc(var(--size-spacing-5) * -1);
   }
 
   [data-site-header-nav-position='right'] & {
@@ -149,6 +149,14 @@ $menu-sub-max-width: 19rem;
         [data-site-header-nav-position='center'] &,
         [data-site-header-nav-position='left'] & {
           left: 0;
+        }
+
+        // increase max-width if mega menu is left-aligned
+        // to align the menu item text with the site name.
+        [data-site-header-nav-position='left'] & {
+          max-width: calc(
+            var(--size-component-layout-width-site) + var(--size-spacing-5)
+          );
         }
 
         [data-site-header-nav-position='right'] & {
